Flexible way to add the secret
Signed-off-by: Carlisia <carlisia@vmware.com>

--- a/design/CLI/PoC/overlays/plugins/kustomization.yaml
+++ b/design/CLI/PoC/overlays/plugins/kustomization.yaml
@@ -4,11 +4,19 @@ kind: Kustomization
 bases:
   - ../../base
 
-resources:
-  - secret.yaml
 patchesStrategicMerge:
   - aws-plugin.yaml # this patches the Velero deployment
-  - gcp-plugin.yaml # this patches the Velero deployment
+  - azure-plugin.yaml # this patches the Velero deployment
+
+generatorOptions:
+  disableNameSuffixHash: true
+  labels: 
+    component: velero
+
+secretGenerator:
+- name: cloud-credentials
+  files:
+  - "cloud"
 
 
 
