Fix validation on CRD yamls
Signed-off-by: Carlisia <carlisia@vmware.com>

--- a/design/CLI/PoC/base/kustomization.yaml
+++ b/design/CLI/PoC/base/kustomization.yaml
@@ -3,6 +3,7 @@ kind: Kustomization
 
 resources:
   - deployment.yaml
+  - CRDs.yaml
   - backupstoragelocations.yaml
   - volumesnapshotlocations.yaml # including so the velero server can run
   - resticrepository.yaml # including so the velero server can runl
